// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RigComponent /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    session={
        Object {
            "authToken": "test",
            "displayName": "test",
            "id": "test",
            "login": "test",
            "profileImageUrl": "test.png",
          }
    }
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          createNewProject={[Function]}
          currentProjectIndex={0}
          error={undefined}
          manifest={undefined}
          projects={
                    Array [
                              Object {},
                              Object {},
                            ]
          }
          selectProject={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <div>
          <ExtensionViewContainer
                    deleteExtensionViewHandler={[Function]}
                    extensionViews={undefined}
                    isLocal={undefined}
                    manifest={undefined}
                    openEditViewHandler={[Function]}
                    openExtensionViewHandler={[Function]}
                    secret={undefined}
          />
          <Console />
</div>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "createNewProject": [Function],
          "currentProjectIndex": 0,
          "error": undefined,
          "manifest": undefined,
          "projects": Array [
            Object {},
            Object {},
          ],
          "selectProject": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExtensionViewContainer
              deleteExtensionViewHandler={[Function]}
              extensionViews={undefined}
              isLocal={undefined}
              manifest={undefined}
              openEditViewHandler={[Function]}
              openExtensionViewHandler={[Function]}
              secret={undefined}
/>,
            false,
            false,
            <Console />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "deleteExtensionViewHandler": [Function],
              "extensionViews": undefined,
              "isLocal": undefined,
              "manifest": undefined,
              "openEditViewHandler": [Function],
              "openExtensionViewHandler": [Function],
              "secret": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            createNewProject={[Function]}
            currentProjectIndex={0}
            error={undefined}
            manifest={undefined}
            projects={
                        Array [
                                    Object {},
                                    Object {},
                                  ]
            }
            selectProject={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <div>
            <ExtensionViewContainer
                        deleteExtensionViewHandler={[Function]}
                        extensionViews={undefined}
                        isLocal={undefined}
                        manifest={undefined}
                        openEditViewHandler={[Function]}
                        openExtensionViewHandler={[Function]}
                        secret={undefined}
            />
            <Console />
</div>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "createNewProject": [Function],
            "currentProjectIndex": 0,
            "error": undefined,
            "manifest": undefined,
            "projects": Array [
              Object {},
              Object {},
            ],
            "selectProject": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExtensionViewContainer
                deleteExtensionViewHandler={[Function]}
                extensionViews={undefined}
                isLocal={undefined}
                manifest={undefined}
                openEditViewHandler={[Function]}
                openExtensionViewHandler={[Function]}
                secret={undefined}
/>,
              false,
              false,
              <Console />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "deleteExtensionViewHandler": [Function],
                "extensionViews": undefined,
                "isLocal": undefined,
                "manifest": undefined,
                "openEditViewHandler": [Function],
                "openExtensionViewHandler": [Function],
                "secret": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<RigComponent /> renders extension view correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    session={
        Object {
            "authToken": "test",
            "displayName": "test",
            "id": "test",
            "login": "test",
            "profileImageUrl": "test.png",
          }
    }
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          createNewProject={[Function]}
          currentProjectIndex={0}
          error={undefined}
          manifest={undefined}
          projects={
                    Array [
                              Object {
                                "extensionViews": Array [
                                  Object {
                                    "channelId": "twitch",
                                    "features": Object {
                                      "isChatEnabled": true,
                                    },
                                    "id": "1",
                                    "isPopout": false,
                                    "linked": false,
                                    "linkedUserId": "",
                                    "mode": "viewer",
                                    "opaqueId": "ARIGopaqueId",
                                    "orientation": "Portrait",
                                    "role": "Logged-Out Viewer",
                                    "type": "Panel",
                                    "x": 0,
                                    "y": 0,
                                  },
                                ],
                              },
                            ]
          }
          selectProject={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <div>
          <ExtensionViewContainer
                    deleteExtensionViewHandler={[Function]}
                    extensionViews={
                              Array [
                                        Object {
                                          "channelId": "twitch",
                                          "features": Object {
                                            "isChatEnabled": true,
                                          },
                                          "id": "1",
                                          "isPopout": false,
                                          "linked": false,
                                          "linkedUserId": "",
                                          "mode": "viewer",
                                          "opaqueId": "ARIGopaqueId",
                                          "orientation": "Portrait",
                                          "role": "Logged-Out Viewer",
                                          "type": "Panel",
                                          "x": 0,
                                          "y": 0,
                                        },
                                      ]
                    }
                    isLocal={undefined}
                    manifest={undefined}
                    openEditViewHandler={[Function]}
                    openExtensionViewHandler={[Function]}
                    secret={undefined}
          />
          <Console />
</div>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "createNewProject": [Function],
          "currentProjectIndex": 0,
          "error": undefined,
          "manifest": undefined,
          "projects": Array [
            Object {
              "extensionViews": Array [
                Object {
                  "channelId": "twitch",
                  "features": Object {
                    "isChatEnabled": true,
                  },
                  "id": "1",
                  "isPopout": false,
                  "linked": false,
                  "linkedUserId": "",
                  "mode": "viewer",
                  "opaqueId": "ARIGopaqueId",
                  "orientation": "Portrait",
                  "role": "Logged-Out Viewer",
                  "type": "Panel",
                  "x": 0,
                  "y": 0,
                },
              ],
            },
          ],
          "selectProject": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExtensionViewContainer
              deleteExtensionViewHandler={[Function]}
              extensionViews={
                            Array [
                                          Object {
                                            "channelId": "twitch",
                                            "features": Object {
                                              "isChatEnabled": true,
                                            },
                                            "id": "1",
                                            "isPopout": false,
                                            "linked": false,
                                            "linkedUserId": "",
                                            "mode": "viewer",
                                            "opaqueId": "ARIGopaqueId",
                                            "orientation": "Portrait",
                                            "role": "Logged-Out Viewer",
                                            "type": "Panel",
                                            "x": 0,
                                            "y": 0,
                                          },
                                        ]
              }
              isLocal={undefined}
              manifest={undefined}
              openEditViewHandler={[Function]}
              openExtensionViewHandler={[Function]}
              secret={undefined}
/>,
            false,
            false,
            <Console />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "deleteExtensionViewHandler": [Function],
              "extensionViews": Array [
                Object {
                  "channelId": "twitch",
                  "features": Object {
                    "isChatEnabled": true,
                  },
                  "id": "1",
                  "isPopout": false,
                  "linked": false,
                  "linkedUserId": "",
                  "mode": "viewer",
                  "opaqueId": "ARIGopaqueId",
                  "orientation": "Portrait",
                  "role": "Logged-Out Viewer",
                  "type": "Panel",
                  "x": 0,
                  "y": 0,
                },
              ],
              "isLocal": undefined,
              "manifest": undefined,
              "openEditViewHandler": [Function],
              "openExtensionViewHandler": [Function],
              "secret": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            createNewProject={[Function]}
            currentProjectIndex={0}
            error={undefined}
            manifest={undefined}
            projects={
                        Array [
                                    Object {
                                      "extensionViews": Array [
                                        Object {
                                          "channelId": "twitch",
                                          "features": Object {
                                            "isChatEnabled": true,
                                          },
                                          "id": "1",
                                          "isPopout": false,
                                          "linked": false,
                                          "linkedUserId": "",
                                          "mode": "viewer",
                                          "opaqueId": "ARIGopaqueId",
                                          "orientation": "Portrait",
                                          "role": "Logged-Out Viewer",
                                          "type": "Panel",
                                          "x": 0,
                                          "y": 0,
                                        },
                                      ],
                                    },
                                  ]
            }
            selectProject={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <div>
            <ExtensionViewContainer
                        deleteExtensionViewHandler={[Function]}
                        extensionViews={
                                    Array [
                                                Object {
                                                  "channelId": "twitch",
                                                  "features": Object {
                                                    "isChatEnabled": true,
                                                  },
                                                  "id": "1",
                                                  "isPopout": false,
                                                  "linked": false,
                                                  "linkedUserId": "",
                                                  "mode": "viewer",
                                                  "opaqueId": "ARIGopaqueId",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                        }
                        isLocal={undefined}
                        manifest={undefined}
                        openEditViewHandler={[Function]}
                        openExtensionViewHandler={[Function]}
                        secret={undefined}
            />
            <Console />
</div>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "createNewProject": [Function],
            "currentProjectIndex": 0,
            "error": undefined,
            "manifest": undefined,
            "projects": Array [
              Object {
                "extensionViews": Array [
                  Object {
                    "channelId": "twitch",
                    "features": Object {
                      "isChatEnabled": true,
                    },
                    "id": "1",
                    "isPopout": false,
                    "linked": false,
                    "linkedUserId": "",
                    "mode": "viewer",
                    "opaqueId": "ARIGopaqueId",
                    "orientation": "Portrait",
                    "role": "Logged-Out Viewer",
                    "type": "Panel",
                    "x": 0,
                    "y": 0,
                  },
                ],
              },
            ],
            "selectProject": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExtensionViewContainer
                deleteExtensionViewHandler={[Function]}
                extensionViews={
                                Array [
                                                Object {
                                                  "channelId": "twitch",
                                                  "features": Object {
                                                    "isChatEnabled": true,
                                                  },
                                                  "id": "1",
                                                  "isPopout": false,
                                                  "linked": false,
                                                  "linkedUserId": "",
                                                  "mode": "viewer",
                                                  "opaqueId": "ARIGopaqueId",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                }
                isLocal={undefined}
                manifest={undefined}
                openEditViewHandler={[Function]}
                openExtensionViewHandler={[Function]}
                secret={undefined}
/>,
              false,
              false,
              <Console />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "deleteExtensionViewHandler": [Function],
                "extensionViews": Array [
                  Object {
                    "channelId": "twitch",
                    "features": Object {
                      "isChatEnabled": true,
                    },
                    "id": "1",
                    "isPopout": false,
                    "linked": false,
                    "linkedUserId": "",
                    "mode": "viewer",
                    "opaqueId": "ARIGopaqueId",
                    "orientation": "Portrait",
                    "role": "Logged-Out Viewer",
                    "type": "Panel",
                    "x": 0,
                    "y": 0,
                  },
                ],
                "isLocal": undefined,
                "manifest": undefined,
                "openEditViewHandler": [Function],
                "openExtensionViewHandler": [Function],
                "secret": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
